<resources>
    <string name="app_name">not PTU, but a college</string>
    <string name="welcom">Welcome to the club buddy</string>
    <string name="menu_guess">Угадайка</string>
    <string name="menu_calc">Калькулятор</string>
    <string name="menu_mainPage">Основное меню</string>
    <string name="menu_elements">Лайауты и вивы</string>
    <string name="menu_data">Отправка данных</string>
    <string name="menu_changeText">Настройки текста</string>
    <string name="menu_photo">Камера</string>
    <string name="menu_todoList">Список дел</string>
    <string name="menu_testStatus">Тест на работу</string>
    <string name="menu_userForm">Форма студента</string>
    <string name="menu_exit">Выход</string>
    <string name="behind">Недолет!</string>
    <string name="ahead">Перелет!</string>
    <string name="hit">В точку!</string>
    <string name="play_more">Ввести значение</string>
    <string name="try_to_guess">Сыграть еще</string>
    <string name="reset">Новая игра</string>
    <string name="input_value">Попробуй отгадать число (1 &#8211; 100)</string>
    <string name="input_value_hard">Попробуй отгадать число (1 &#8211; 10)</string>
    <string name="input_value_lose">Вы проиграли :с</string>
    <string name="reset_complete">Число обновленно!</string>
    <string name="error">Ошибка ввода!</string>
    <string name="changeComplexity">Уровень сложности изменен!</string>
    <string name="butExit">Выход</string>
    <string name="complexity">Выберите уровень сложности</string>
    <string name="complexity_easy">Казуальщик</string>
    <string name="complexity_medium">Теоретик</string>
    <string name="complexity_hard">Ну рискни</string>
    <string name="complexity_easy_description">Вам дается диапазон от 1 до 100 и вам нужно угадать число основываясь на подсказках</string>
    <string name="complexity_medium_description">Правила как у Казуальщиков, но 5 попыток</string>
    <string name="complexity_hard_description">Все твои подсказки с 50% вероятностью будут ложью, диапазон от 1 до 50 и 4 попытки</string>
    <string name="elemText">Hello from XML</string>
    <string name="elemButChg">Update The TextView</string>
    <string name="elemInputChg">A name</string>
    <string name="send_data">Отправить данные</string>
    <string name="what_send_data">Что вы хотите заказать ?</string>
    <string name="how_send_data">Сколько вы хотите заказать ?</string>
    <string name="menu_filInt">Фильтр намерений</string>
    <string name="todolist_label">Категории моих дел</string>
    <string name="testTitle">Переутомление (Ортостатическая проба)</string>
    <string name="testDescription">Для прохождения теста необходимо иметь возможность лечь на 5 минут. Время проведения теста около 10-15 минут.</string>
    <string name="testBirthday">День вашего рождения:</string>
    <string name="testOption1">1. Необходимо лечь и лежать 5 минут почти без движения.</string>
    <string name="testOption2">2. Посчитать пульс в течении минуты.</string>
    <string name="testOption3">3. Введите пульс в положении лежа: </string>
    <string name="testOption4">4. Встать и стоять почти без движения 5 минут.</string>
    <string name="testOption5">5. Посчитать пульс в течении минуты.</string>
    <string name="testOption6">6. Введите пульс в положении стоя: </string>
    <string name="testOption7">7. Нажмите "Ввод". Тест завершен!</string>
    <string name="testTitleResult">Результат теста</string>
    <string name="testDescriptionResult">Не забывайте о регулярном проффесиональном медецинском осмотре!</string>
    <string name="testValueResult">Введенные значения соответствуют</string>
    <string name="testResponseGoodResult">отсутствию переутомления</string>
    <string name="testResponseMidResult">среднему переутомлению</string>
    <string name="testResponseBadResult">наличию переутомления</string>
    <string name="formUser_name">Имя: </string>
    <string name="formUser_group">Группа: </string>
    <string name="formUser_age">Возраст: </string>
    <string name="formUser_dateB">Дата рождения: </string>
</resources>
