<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/mainPage"
        android:orderInCategory="1"
        android:title="@string/menu_mainPage"/>
    <item
        android:id="@+id/calc"
        android:orderInCategory="2"
        android:title="@string/menu_calc"/>
    <item
        android:id="@+id/guess"
        android:orderInCategory="3"
        android:title="@string/menu_guess"/>
    <item
        android:id="@+id/elements"
        android:orderInCategory="4"
        android:title="@string/menu_elements"/>
    <item
        android:id="@+id/send_data"
        android:orderInCategory="5"
        android:title="@string/menu_data"/>
    <item
        android:id="@+id/fillIntent"
        android:orderInCategory="6"
        android:title="@string/menu_filInt"/>
    <item
        android:id="@+id/changeText"
        android:orderInCategory="7"
        android:title="@string/menu_changeText"/>
    <item
        android:id="@+id/photoShot"
        android:orderInCategory="8"
        android:title="@string/menu_photo"/>
    <item
        android:id="@+id/todoList"
        android:orderInCategory="9"
        android:title="@string/menu_todoList"/>
    <item
        android:id="@+id/testStatus"
        android:orderInCategory="10"
        android:title="@string/menu_testStatus"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="50"
        android:title="@string/menu_exit"/>
</menu>