<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GuessSet">
    <item
        android:id="@+id/guessEasyMod"
        android:orderInCategory="3"
        android:title="@string/complexity_easy"/>
    <item
        android:id="@+id/guessMediumMod"
        android:orderInCategory="4"
        android:title="@string/complexity_medium"/>
    <item
        android:id="@+id/guessHardMod"
        android:orderInCategory="5"
        android:title="@string/complexity_hard"/>
    <item
        android:id="@+id/mainPage"
        android:orderInCategory="1"
        android:title="@string/menu_mainPage"/>
    <item
        android:id="@+id/exit"
        android:orderInCategory="10"
        android:title="@string/menu_exit"/>
    <item
        android:id="@+id/guessReset"
        android:orderInCategory="2"
        android:title="@string/reset"/>
</menu>