<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ElemMain">
    <TextView
        android:id="@+id/elementsOutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elemText"/>
    <EditText
        android:id="@+id/elementsInputChg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/elemInputChg" />
    <Button
        android:id="@+id/elementsButChg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/elemButChg" />

    <ListView
        android:id="@+id/elementsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />
</LinearLayout>