<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestStatusResult"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testTitleResult"
        android:textColor="@color/design_default_color_error"
        android:textSize="45px"
        android:layout_marginBottom="20dp"></TextView>
    <TextView
        android:textColor="@color/colorCustomText"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testDescriptionResult"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/chill"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"></ImageView>
        <ProgressBar
            android:id="@+id/progressStatus"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="20dp"
            android:minHeight="20dp"
            android:maxHeight="20dp"
            android:min="0"
            android:max="100"
            android:background="@color/design_default_color_error"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/work"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"></ImageView>
    </LinearLayout>
    <TextView
        android:textColor="@color/colorCustomText"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testValueResult"
        android:gravity="center"
        android:textStyle="italic"></TextView>
    <TextView
        android:id="@+id/progressSting"
        android:textColor="@color/colorCustomText"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"></TextView>
</LinearLayout>